--- a/src/index.css
+++ b/src/index.css
@@ -2,27 +2,59 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
-  
+
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #ffffff26;
+  background: #ffffff26;
 }
-  
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 5px;
+  background: #888;
+  border-radius: 5px;
 }
-  
+
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+  background: #555;
+}
+
+.grid-repeating {
+  background-size: 200px 200px;
+  background-image: linear-gradient(to right, rgba(128, 128, 128, 0.2) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(128, 128, 128, 0.2) 1px, transparent 1px);
+}
+
+.new-check{
+    opacity: 0;
+    width: 20px;
+    height: 20px;
+    position: relative;
+    z-index: 9999;
+}
+.checkmark{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFDA4C;
+}
+
+.new-check:checked ~ .checkmark:after{
+    content: '';
+    border-radius: 50px;
+    width: 15px;
+    height: 15px;
+    background-color: rgb(61, 80, 61);
 }
