--- a/src/index.css
+++ b/src/index.css
@@ -58,3 +58,15 @@
     height: 15px;
     background-color: rgb(61, 80, 61);
 }
+
+.gradient{
+  background : linear-gradient(120deg, #42CBD9 -18.41%, #FB7BF2 42.15%, #FB9A49 100%) !important
+}
+.gradient-text{
+  
+    background: linear-gradient(120deg, #42CBD9 -18.41%, #FB7BF2 42.15%, #FB9A49 100%) !important;
+    background-clip: text;
+    -webkit-background-clip: text !important;
+    -webkit-text-fill-color: transparent;
+  
+}
