--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,44 @@
   src: local('Prototype'), url(./assets/Prototype.ttf) format('truetype');
 }
 
+body * {
+  @apply transition-colors duration-200;
+}
+
+body {
+  @apply bg-white dark:bg-black;
+}
+
+.landing-background {
+  background: linear-gradient(
+      90deg,
+      #50c49933 20%,
+      #5e7edb33 40%,
+      #665bff33 60%,
+      #ff7ea033 80%
+  );
+}
+
+:is(.dark .dark\:dark-landing-background) {
+  background: linear-gradient(
+      90deg,
+      #50c4991a 20%,
+      #5e7edb1a 40%,
+      #665bff1a 60%,
+      #ff7ea01a 80%
+  );
+}
+
+.background-text-gradient {
+  background-image: linear-gradient(
+      90deg,
+      #50c499 20%,
+      #5e7edb 40%,
+      #665bff 60%,
+      #ff7ea0 80%
+  );
+}
+
 .prototype{
   font-family: 'Prototype';
 }
